The serverBaseURI is now being decoded to a URL to convert escaped characters, like %20, to the characters they actually represent, for %20 it would be a space. This solves a file not found error when looking up the JDBC drivers on the Wabit server when the absolute path to the drivers contains a space.